# CTestTestAdapter

./: .gitignore  CMakeLists.txt  CTestTestAdapter.sln  CTestTestAdapter.vsix  ClearAllBuildDirs.bat  ClearExperimentalHive.bat  README.md  Setup.bat  SetupVs2012.bat  SetupVs2013.bat  SetupVs2015.bat  SetupVs2017.bat  Version.cmake  VersionCompute.cmake  install.bat  install15.bat  uninstall.bat  uninstall15.bat  update.bat  update15.bat  update_vsix.bat
CTestAdapter/: AssemblyInfo.cs.in  BuildConfiguration.cs  CMakeCache.cs  CMakeLists.txt  CTestAdapterOptionPage.cs  CTestAdapterPackge.cs  CTestContainer.cs  CTestContainerDiscoverer.cs  CTestContainerDiscovererBase.cs  CTestDiscoverer.cs  CTestExecutor.cs  CTestInfo.cs  CTestLogWindow.cs  CTestTestCollector.cs  DTEHelper.cs  Key.snk  LICENSE.txt  ProcessExtensions.cs  VSPackage.resx  source.extension.vsixmanifest  source.in.extension.vsixmanifest  vsix.props
CTestAdapter/Events/: CTestTestfileAddRemoveListener.cs  ChildProcessWatcher.cs  ISolutionEventsListener.cs  ITestFileAddRemoveListener.cs  ITestFilesUpdateWatcher.cs  ProjectItemAddRemoveListener.cs  SolutionEventListener.cs  SolutionEventsListenerEventArgs.cs  TestFileChangedEventArgs.cs  TestFilesWatcher.cs
CTestAdapterSample/: CMakeLists.txt
CTestAdapterSample/src/: CMakeLists.txt  main.cpp  main_fail.cpp
CTestTestAdapter/: BuildConfiguration.cs  CMakeCache.cs  CMakeLists.txt  CTestContainerDiscoverer.cs  CTestContainerDiscovererBase.cs  CTestDiscoverer.cs  CTestExecutor.cs  CTestInfo.cs  CTestLogWindow.cs  CTestTestAdapter-1.1.vsix  CTestTestAdapter.csproj  CTestTestCollector.cs  DTEHelper.cs  ProcessExtensions.cs  source.extension.vsixmanifest
CTestTestAdapter/Events/: CTestTestfileAddRemoveListener.cs  ChildProcessWatcher.cs  ISolutionEventsListener.cs  ITestFilesUpdateWatcher.cs  ProjectItemAddRemoveListener.cs  SolutionEventListener.cs  SolutionEventsListenerEventArgs.cs  TestFileChangedEventArgs.cs  TestFilesWatcher.cs
CTestTestAdapter/Properties/: AssemblyInfo.cs
CTestTestAdapterVsix/: CMakeLists.txt
CTestTestAdapterVsix/Properties/: AssemblyInfo.cs
CTestTestAdapterVsix/vsix11/: source.extension.vsixmanifest
CTestTestAdapterVsix/vsix12/: source.extension.vsixmanifest
CTestTestAdapterVsix/vsix14/: source.extension.vsixmanifest
ImplemenationCTestTestAdapter/: BuildConfiguration.cs  CMakeCache.cs  CTestCase.cs  CTestContainer.cs  CTestContainerDiscoverer.cs  CTestContainerDiscovererBase.cs  CTestDiscoverer.cs  CTestExecutor.cs  CTestHelpers.cs  CTestInfo.cs  CTestLogWindow.cs  CTestLogger.cs  CTestSolutionEventListener.cs  CTestTestCollector.cs  CTestTestFilesWatcher.cs  DTEHelper.cs  ImplemenationCTestTestAdapter.csproj  ProcessExtensions.cs
ImplemenationCTestTestAdapter/Events/: CTestTestfileAddRemoveListener.cs  ChildProcessWatcher.cs  ISolutionEventsListener.cs  ITestFileAddRemoveListener.cs  ITestFilesUpdateWatcher.cs  ProjectItemAddRemoveListener.cs  SolutionEventListener.cs  SolutionEventsListenerEventArgs.cs  TestFileChangedEventArgs.cs  TestFilesWatcher.cs
ImplemenationCTestTestAdapter/Properties/: AssemblyInfo.cs
SampleProject/: CMakeLists.txt  README.md  test1.cpp  test2.cpp
